agrego animaciones y mas

--- a/pages/speed-app.html
+++ b/pages/speed-app.html
@@ -35,45 +35,58 @@
         <section class="img__swipe" >
             <img class="img__swipe--carrousel" src="../resources/descarga.jpg" alt="descarga-app">
         </section>
+    <section class="info__app">
+        <div class="info__foto"></div>
+        <article class="info__texto">
+            <div class="info__texto--cuadro">
+            <h2>EXCLUSIVA PARA PUNTOS DE VENTA</h2>
+            <p class="app__texto">Presentamos la app de Speed.
+                Una nueva herramienta digital para el punto de venta, que agilizará la gestión de pedidos
+                y fidelizará a tus clientes, brindando mayor calidad de servicio.</p>
+            </div>
+        </article>
+        <div class="boton__cuadro--app">
+        <button class="boton__app">Descargar</button>
+        </div>
+        <div class="qr__app"></div>
+    </section>
     </main>
     <footer> <!-- pie de pagina -->
-        <section class="footer__nosotros">
-            <div class="footer__titulonosotros">
-                <h3 class="footer__titulo--nosotros" >Nosotros</h3>
-            </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde quaerat corrupti pariatur possimus! Aliquid earum fugiat fugit</p>
-    </section>
-        <section class="footer__ayuda">
-                <div class="footer__tituloayuda">
-                    <h3 class="footer__titulo--ayuda" >Ayuda</h3>
+        <section class="footer__gral">
+                <div class="footer__titulonosotros">
+                    <h3 class="footer__titulo--nosotros" >Nosotros</h3>
+                <p class="info__nosotros">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde quaerat corrupti pariatur possimus! Aliquid earum fugiat fugit</p>
                 </div>
-                    <ul class="footer__titulo--preguntas">
-                        <li class="footer__preguntas"><a href="#" target="_blank">Preguntas frecuentes</a></li>
-                        <li class="footer__preguntas"><a href="#" target="_blank">Trabaja con nosotros</a></li>
-                        <li class="footer__preguntas"><a href="#" target="_blank">Registrarme</a></li>
+                    <div class="footer__tituloayuda">
+                        <h3 class="footer__titulo--ayuda" >Ayuda</h3>
+                    
+                        <ul class="footer__titulo--preguntas">
+                            <li class="footer__preguntas"><a href="#" target="_blank">Preguntas frecuentes</a></li>
+                            <li class="footer__preguntas"><a href="#" target="_blank">Trabaja con nosotros</a></li>
+                            <li class="footer__preguntas"><a href="#" target="_blank">Registrarme</a></li>
+                        </ul>
+                    </div>
                         <div class="footer__boton">
                             <button class="boton__soporte">Chat soporte</button>
                         </div>
-                    </ul>
+            <h3 class="footer__titulo--redes">Encontranos en</h3>
+            <div class="footer__imagen">
+                <a href="#" target="_blank">
+                <img class="footer__imagen--redes" src="../resources/facebook.png" alt="facebook">
+                </a>
+                <a href="#" target="_blank">
+                <img class="footer__imagen--redes" src="../resources/whatsapp.png" alt="whatsapp">
+                </a>
+                <a href="https://www.instagram.com/speedunlimited_/?hl=es" target="_blank">
+                <img class="footer__imagen--redes" src="../resources/instagram.png" alt="instagram">
+                </a>
+                <a href="#" target="_blank">
+                <img class="footer__imagen--redes" src="../resources/twitter.png" alt="twitter"> 
+                </a>
+            </div>
+            <!-- <p class="footer__derechos">todos los derechos reservados</p> --><!-- la "P" para parrafos -->  
+            
         </section>
-    <section class="footer__redes">
-        <h3 class="footer__titulo--redes">Encontranos en</h3>
-        <div class="footer__imagen">
-            <a href="#" target="_blank">
-            <img class="footer__imagen--redes" src="../resources/facebook.png" alt="facebook">
-            </a>
-            <a href="#" target="_blank">
-            <img class="footer__imagen--redes" src="../resources/whatsapp.png" alt="whatsapp">
-            </a>
-            <a href="https://www.instagram.com/speedunlimited_/?hl=es" target="_blank">
-            <img class="footer__imagen--redes" src="../resources/instagram.png" alt="instagram">
-            </a>
-            <a href="#" target="_blank">
-            <img class="footer__imagen--redes" src="../resources/twitter.png" alt="twitter"> 
-            </a>
-        </div>
-        <!-- <p class="footer__derechos">todos los derechos reservados</p> --><!-- la "P" para parrafos -->  
-    </section> 
     </footer>
 </body>
 </html>
