--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -33,7 +33,7 @@
     </header>
     <main class="main__tienda">
         <section class="main__portada">
-            <img src="../resources/PORTADA-NUESTROS-PRODUCTOS.jpg" alt="portada de productos">
+            <div class="portada__prod" ></div>
         </section>
         <h1 class="titulo__productos">Productos</h1>
         <section class="productos__grid">
@@ -89,43 +89,41 @@
         <div>.</div>
     </main>
     <footer> <!-- pie de pagina -->
-        <section class="footer__nosotros">
-            <div class="footer__titulonosotros">
-                <h3 class="footer__titulo--nosotros" >Nosotros</h3>
-            </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde quaerat corrupti pariatur possimus! Aliquid earum fugiat fugit</p>
-    </section>
-        <section class="footer__ayuda">
-                <div class="footer__tituloayuda">
-                    <h3 class="footer__titulo--ayuda" >Ayuda</h3>
+        <section class="footer__gral">
+                <div class="footer__titulonosotros">
+                    <h3 class="footer__titulo--nosotros" >Nosotros</h3>
+                <p class="info__nosotros">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde quaerat corrupti pariatur possimus! Aliquid earum fugiat fugit</p>
                 </div>
-                    <ul class="footer__titulo--preguntas">
-                        <li class="footer__preguntas"><a href="#" target="_blank">Preguntas frecuentes</a></li>
-                        <li class="footer__preguntas"><a href="#" target="_blank">Trabaja con nosotros</a></li>
-                        <li class="footer__preguntas"><a href="#" target="_blank">Registrarme</a></li>
+                    <div class="footer__tituloayuda">
+                        <h3 class="footer__titulo--ayuda" >Ayuda</h3>
+                    
+                        <ul class="footer__titulo--preguntas">
+                            <li class="footer__preguntas"><a href="#" target="_blank">Preguntas frecuentes</a></li>
+                            <li class="footer__preguntas"><a href="#" target="_blank">Trabaja con nosotros</a></li>
+                            <li class="footer__preguntas"><a href="#" target="_blank">Registrarme</a></li>
+                        </ul>
+                    </div>
                         <div class="footer__boton">
                             <button class="boton__soporte">Chat soporte</button>
                         </div>
-                    </ul>
+            <h3 class="footer__titulo--redes">Encontranos en</h3>
+            <div class="footer__imagen">
+                <a href="#" target="_blank">
+                <img class="footer__imagen--redes" src="../resources/facebook.png" alt="facebook">
+                </a>
+                <a href="#" target="_blank">
+                <img class="footer__imagen--redes" src="../resources/whatsapp.png" alt="whatsapp">
+                </a>
+                <a href="https://www.instagram.com/speedunlimited_/?hl=es" target="_blank">
+                <img class="footer__imagen--redes" src="../resources/instagram.png" alt="instagram">
+                </a>
+                <a href="#" target="_blank">
+                <img class="footer__imagen--redes" src="../resources/twitter.png" alt="twitter"> 
+                </a>
+            </div>
+            <!-- <p class="footer__derechos">todos los derechos reservados</p> --><!-- la "P" para parrafos -->  
+            
         </section>
-    <section class="footer__redes">
-        <h3 class="footer__titulo--redes">Encontranos en</h3>
-        <div class="footer__imagen">
-            <a href="#" target="_blank">
-            <img class="footer__imagen--redes" src="../resources/facebook.png" alt="facebook">
-            </a>
-            <a href="#" target="_blank">
-            <img class="footer__imagen--redes" src="../resources/whatsapp.png" alt="whatsapp">
-            </a>
-            <a href="https://www.instagram.com/speedunlimited_/?hl=es" target="_blank">
-            <img class="footer__imagen--redes" src="../resources/instagram.png" alt="instagram">
-            </a>
-            <a href="#" target="_blank">
-            <img class="footer__imagen--redes" src="../resources/twitter.png" alt="twitter"> 
-            </a>
-        </div>
-        <!-- <p class="footer__derechos">todos los derechos reservados</p> --><!-- la "P" para parrafos -->  
-    </section> 
     </footer>
 </body>
 </html>
