--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="resources/favicon.ico" type="image/x-icon">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <!-- letras de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,9 +34,27 @@
         </section> 
     </header>
     <main><!-- todo el contenido menos header o footer -->
-        <section class="img__swipe" >
-            <img class="img__swipe--carrousel" src="resources/latalider.jpg" alt="descarga-app">
-        </section>
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="3000">
+                <img src="resources/latalider.jpg" class="d-block w-100" alt="Portada lider">
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img src="resources/descarga.jpg" class="d-block w-100" alt="portada de la app">
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img src="resources/daynight.jpg" class="d-block w-100" alt="portada day and night">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         <section> </section>  <!-- separa en secciones -->  
         <ol> </ol> <!-- lista enumerada/ordenada con numeros -->
         <section class="info__speed">
@@ -81,5 +101,7 @@
             
         </section>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
