--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../resources/favicon.ico" type="image/x-icon">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <!-- letras de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +22,23 @@
                 <img class="logo__pag" src="../resources/HORIZONTAL1.png" alt="logo">
                 </a>
             </div>
-        <nav class="header__nav--pag">
+            <nav class="navbar navbar-expand-lg" >
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ms-auto">
+        <a class="text-light" href="../index.html">HOME</a>
+        <a class="text-light" href="#">TIENDA</a>
+        <a class="text-light" href="../pages/eventos.html">EVENTOS</a>
+        <a class="text-light" href="../pages/nosotros.html">NOSOTROS</a>
+        <a class="text-light" href="../pages/speed-app.html">SPEED APP</a>
+      </div>
+    </div>
+  </div>
+</nav>
+        <!-- <nav class="header__nav--pag">
             <ul class="header__nav--paglis">
                 <li class="header__item--pag"><a href="../index.html">HOME</a></li>
                 <li class="header__item--pag"><a href="#">TIENDA</a></li>
@@ -28,7 +46,7 @@
                 <li class="header__item--pag"><a href="nosotros.html">NOSOTROS</a></li>
                 <li class="header__item--pag"><a href="speed-app.html">SPEED APP</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </section>
     </header>
     <main class="main__tienda">
@@ -125,5 +143,7 @@
             
         </section>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
