agrego bootstrap a varias pag

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,7 +21,23 @@
                 <img class="logo__pag" src="../resources/HORIZONTAL1.png" alt="logo">
                 </a>
             </div>
-        <nav class="header__nav--pag">
+            <nav class="navbar navbar-expand-lg" >
+                <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                    <a class="text-light" href="../index.html">HOME</a>
+                    <a class="text-light" href="../pages/tienda.html">TIENDA</a>
+                    <a class="text-light" href="../pages/eventos.html">EVENTOS</a>
+                    <a class="text-light" href="#">NOSOTROS</a>
+                    <a class="text-light" href="../pages/speed-app.html">SPEED APP</a>
+                    </div>
+                </div>
+                </div>
+            </nav>
+        <!-- <nav class="header__nav--pag">
             <ul class="header__nav--paglis">
                 <li class="header__item--pag"><a href="../index.html">HOME</a></li>
                 <li class="header__item--pag"><a href="tienda.html">TIENDA</a></li>
@@ -29,7 +45,7 @@
                 <li class="header__item--pag"><a href="#">NOSOTROS</a></li>
                 <li class="header__item--pag"><a href="speed-app.html">SPEED APP</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </section>
     </header>
     <main>
@@ -50,42 +66,40 @@
             <!-- </section> -->
             <div class="none1"></div>
             <div class="none2"></div>
-        <section class="formulario">
-            <h1> CONTACTO </h1>
-            <form method="post" class="formulario__card"> 
-                <div class="form__nombre">
-                    <input class="form__input" type="nombres" id="nombres" placeholder="Ingese su Nombre" >
+            <form method="post" class="shadow p-3 mb-5 rounded row g-3 needs-validation formulario__card h-100 d-inline-block" style="background-color: rgb(95, 21, 21);" novalidate> 
+                <h1 class="titulo__contacto"> CONTACTO </h1>
+                <div class="form-floating mb-3">
+                    <input type="nombres" class="form-control" id="floatingInput" placeholder="Nombre" style="background-color: rgb(179, 126, 126);">
+                    <label class="fw-normal" for="floatingInput" style="color: black;">Nombre</label>
                 </div>
-                <div class="form__apellido">
-                    <input  class="form__input" type="nombres" id="nombres" placeholder="Ingese su Apellido" >
+                <div class="form-floating mb-3">
+                    <input type="nombres" class="form-control" id="floatingInput" placeholder="Apellido" style="background-color: rgb(179, 126, 126);">
+                    <label class="fw-normal" for="floatingInput" style="color: black;">Apellido</label>
                 </div>
-                <div class="form__email">
-                    <input class="form__input" type="nombres" id="nombres" placeholder="Ingese su Correo" >
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" style="background-color: rgb(179, 126, 126);">
+                    <label class="fw-normal" for="floatingInput" style="color: black;">Correo electronico</label>
                 </div>
-                <div class="form__localidad">
-                    <input class="form__input" type="nombres" id="nombres" placeholder="Ingrese su Localidad" >
+                <div class="form-floating mb-3">
+                    <input type="nombres" class="form-control" id="floatingInput" placeholder="Localidad" style="background-color: rgb(179, 126, 126);">
+                    <label class="fw-normal" for="floatingInput" style="color: black;">Localidad</label>
                 </div>
-                <div class="form__motivo">
-                    <label>Quiero hacer un:</label>
-                    <div>
-                    <select class="form__input" name="motivo" id="motivo">
-                        <option value="Reclamo">Reclamo</option>
-                        <option value="Reclamo">Solicitud</option>
-                        <option value="Reclamo">Evento</option>
-                        <option value="Reclamo">Otro</option>
+                <div class="form-floating">
+                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example" style="background-color: rgb(179, 126, 126);">
+                        <option class="fw-normal" selected disabled style="color: black;">Seleccione...</option>
+                        <option value="1">Reclamo</option>
+                        <option value="2">Solicitud</option>
+                        <option value="3">Evento</option>
+                        <option value="4">Otro</option>
                     </select>
-                    </div>
+                    <label for="floatingSelect">Eliga una opcion</label>
                 </div>
-                <div>
-                    <label>Detallanos tu solicitud</label>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="background-color: rgb(179, 126, 126);height: 100%;"></textarea>
+                    <label for="floatingTextarea2">Detallanos tu solicitud</label>
                 </div>
-                <div>
-                    <label for="Detalla el problema"></label>
-                    <textarea  class="form__input" name="detalle" id="" cols="30" rows="10"></textarea>
-                </div>
-                <div>
-                <input class="form__boton" type="submit" value="Enviar formulario">
-                <input  class="form__boton"  type="reset" value="Borrar formulario">
+                <div class="col-12 position-relative ">
+                    <button class="btn w-75 p-3 position-absolute top-100 start-50 translate-middle mt-5 h-auto fw-normal fs-4" type="submit" style="background-color: rgb(131, 33, 33);color: black;">Enviar</button>
                 </div>
             </form> 
         </section>
@@ -128,7 +142,8 @@
             
         </section>
     </footer>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
 </body>
 </html>
