--- a/pages/speed-app.html
+++ b/pages/speed-app.html
@@ -22,7 +22,23 @@
                 <img class="logo__pag" src="../resources/HORIZONTAL1.png" alt="logo">
                 </a>
             </div>
-        <nav class="header__nav--pag">
+            <nav class="navbar navbar-expand-lg" >
+                <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                    <a class="text-light" href="../index.html">HOME</a>
+                    <a class="text-light" href="../pages/tienda.html">TIENDA</a>
+                    <a class="text-light" href="../pages/eventos.html">EVENTOS</a>
+                    <a class="text-light" href="../pages/nosotros.html">NOSOTROS</a>
+                    <a class="text-light" href="#">SPEED APP</a>
+                    </div>
+                </div>
+                </div>
+            </nav>
+        <!-- <nav class="header__nav--pag">
             <ul class="header__nav--paglis">
                 <li class="header__item--pag"><a href="../index.html">HOME</a></li>
                 <li class="header__item--pag"><a href="tienda.html">TIENDA</a></li>
@@ -30,7 +46,7 @@
                 <li class="header__item--pag"><a href="nosotros.html">NOSOTROS</a></li>
                 <li class="header__item--pag"><a href="#">SPEED APP</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </section>
     </header>
     <main>
