--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -50,23 +50,9 @@
     </header>
     <main>
     <section class="grid__nosotros">
-        <section class="titulo__nosotros">
-            <h2 class="titulo__nosotros--txt">¿POR QUÉ SPEED UNLIMITED TE DA ENERGÍA LAS 24 HS?</h2>
-            <p>CONTIENE CAFEÍNA, TAURINA Y VITAMINAS QUE CONTRIBUYEN A MEJORAR EL ESTADO DE ÁNIMO, LA CONCENTRACIÓN Y LA RECUPERACIÓN. OTORGÁNDOLE ASÍ AL ORGANISMO ESAS SUSTANCIAS PERDIDAS QUE NECESITA PARA LOGRAR UN MAYOR RENDIMIENTO.</p>
-        </section>
-        <div class="img__iconos"></div>
-            <article class="titulo__marcas">
-                <h2>Nuestras marcas</h2>
-            </article>
-            <!-- <section class="fotos__marca"> -->
-                <div class="speed__marca"></div>
-                <div class="hodlmoser__marca"></div>
-                <div class="rena__marca"></div>
-                <div class="block__marca"></div>
-            <!-- </section> -->
-            <div class="none1"></div>
-            <div class="none2"></div>
-            <form method="post" class="shadow p-3 mb-5 rounded row g-3 needs-validation formulario__card h-100 d-inline-block" style="background-color: rgb(95, 21, 21);" novalidate> 
+        <article class="formulario__boot">
+        <div class="center__cc"> 
+            <form method="post" class="shadow p-5 mb-5 rounded row g-3 needs-validation formulario__card d-inline-block" style="background-color: rgb(95, 21, 21);"> 
                 <h1 class="titulo__contacto"> CONTACTO </h1>
                 <div class="form-floating mb-3">
                     <input type="nombres" class="form-control" id="floatingInput" placeholder="Nombre" style="background-color: rgb(179, 126, 126);">
@@ -99,10 +85,27 @@
                     <label for="floatingTextarea2">Detallanos tu solicitud</label>
                 </div>
                 <div class="col-12 position-relative ">
-                    <button class="btn w-75 p-3 position-absolute top-100 start-50 translate-middle mt-5 h-auto fw-normal fs-4" type="submit" style="background-color: rgb(131, 33, 33);color: black;">Enviar</button>
+                    <button class="btn w-50 p-1 position-absolute top-100 start-50 translate-middle mt-3 fw-normal fs-4" type="submit" style="background-color: rgb(131, 33, 33);color: black;">Enviar</button>
                 </div>
             </form> 
+        </div>
+    </article>
+        <section class="titulo__nosotros">
+            <h2 class="titulo__nosotros--txt">¿POR QUÉ SPEED UNLIMITED TE DA ENERGÍA LAS 24 HS?</h2>
+            <p>CONTIENE CAFEÍNA, TAURINA Y VITAMINAS QUE CONTRIBUYEN A MEJORAR EL ESTADO DE ÁNIMO, LA CONCENTRACIÓN Y LA RECUPERACIÓN. OTORGÁNDOLE ASÍ AL ORGANISMO ESAS SUSTANCIAS PERDIDAS QUE NECESITA PARA LOGRAR UN MAYOR RENDIMIENTO.</p>
         </section>
+        <div class="img__iconos"></div>
+            <article class="titulo__marcas">
+                <h2>Nuestras marcas</h2>
+            </article>
+            <!-- <section class="fotos__marca"> -->
+                <div class="speed__marca"></div>
+                <div class="hodlmoser__marca"></div>
+                <div class="rena__marca"></div>
+                <div class="block__marca"></div>
+            <!-- </section> -->
+            <div class="none1"></div>
+            <div class="none2"></div>
     </section>
     </main>
     <footer> <!-- pie de pagina -->
