--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="SPEED, UNLIMITED, SPEED-UNLIMITED, ENERGIZANTE, ENERGIZANTES, BEBIDA">
+    <meta name="description" content="La bebida energizante LIDER de toda ARGENTINA">
     <link rel="shortcut icon" href="resources/favicon.ico" type="image/x-icon">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -18,7 +20,7 @@
 </head>
 <body>
     <header> <!-- ENCABEZADO: barra de navegacion y logo -->
-        <section class="header">
+        <section class="header"> 
             <div class="header__logo">
                 <a href="index.html">
                 <img class="logo" src="resources/HORIZONTAL1.png" alt="logo">
