--- a/pages/speed-app.html
+++ b/pages/speed-app.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="SPEED, UNLIMITED, SPEED-UNLIMITED, ENERGIZANTE, ENERGIZANTES, BEBIDA, APP, APLICACION">
+    <meta name="description" content="Aplicacion de SPEED para que puedas realizar tu pedido desde tu celular">
     <link rel="shortcut icon" href="../resources/favicon.ico" type="image/x-icon">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
