corrigo vista mobile

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <img class="logo" src="resources/HORIZONTAL1.png" alt="logo">
                 </a>
             </div>
-                <nav class="header__nav"><!--  barra de navegacion  -->
-                    <ul class="header__lista"><!-- lista desordenada marcada con items -->
-                        <li class="header__item"><a href="index.html">HOME</a></li> <!-- "a" para poner enlaces/ linkear a otra pag -->
-                        <li class="header__item"><a href="pages/tienda.html">TIENDA</a></li><!-- "li" para listar -->
+                <nav class="header__nav">
+                    <ul class="header__lista">
+                        <li class="header__item"><a href="index.html">HOME</a></li>
+                        <li class="header__item"><a href="pages/tienda.html">TIENDA</a></li>
                         <li class="header__item"><a href="pages/eventos.html">EVENTOS</a></li>
                         <li class="header__item"><a href="pages/nosotros.html">NOSOTROS</a> </li>
                         <li class="header__item"><a href="pages/speed-app.html">SPEED APP</a> </li>
