--- a/index.html
+++ b/index.html
@@ -26,16 +26,23 @@
                 <img class="logo" src="resources/HORIZONTAL1.png" alt="logo">
                 </a>
             </div>
-                <nav class="header__nav">
-                    <ul class="header__lista">
-                        <li class="header__item"><a href="index.html">HOME</a></li>
-                        <li class="header__item"><a href="pages/tienda.html">TIENDA</a></li>
-                        <li class="header__item"><a href="pages/eventos.html">EVENTOS</a></li>
-                        <li class="header__item"><a href="pages/nosotros.html">NOSOTROS</a> </li>
-                        <li class="header__item"><a href="pages/speed-app.html">SPEED APP</a> </li>
-                    </ul>
-                </nav>
-        </section> 
+            <nav class="navbar navbar-expand-lg" >
+                <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav w-100 justify-content-around">
+                    <a class="text-light" href="index.html">HOME</a>
+                    <a class="text-light" href="pages/tienda.html">TIENDA</a>
+                    <a class="text-light" href="pages/eventos.html">EVENTOS</a>
+                    <a class="text-light" href="pages/nosotros.html">NOSOTROS</a>
+                    <a class="text-light" href="pages/speed-app.html">SPEED APP</a>
+                    </div>
+                </div>
+                </div>
+            </nav>
+      </section> 
     </header>
     <main><!-- todo el contenido menos header o footer -->
         <section>
